# Recovery-Fitness

./: .gitignore  Dockerfile  README.md  compose.yaml  package.json  pnpm-lock.yaml  turbo.json
app/: package.json  pnpm-lock.yaml
app/site-backend/: package-lock.json
app/site-frontend/: package.json
apps/frontend-marketing/: package.json  pnpm-lock.yaml  tsconfig.json
apps/frontend-marketing/src/pages/: index.astro
apps/scripts/: htmlConverter.js
apps/site-backend/: .gitignore  docker-compose.yml  fly.toml  package-lock.json  package.json  tsconfig.json
apps/site-backend/src/: payload.config.ts
apps/site-backend/src/collections/: Assets.ts  TestimonialImgs.ts
apps/site-backend/src/globals/: About.ts  Contact.ts  Homepage.ts  Socials.ts  Testimonials.ts  TrainingOptions.ts
apps/site-frontend/: astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
apps/site-frontend/src/components/: Footer.astro  InstagramPosts.jsx  Navigation.astro  TestSlider.astro  TextSlider.jsx
apps/site-frontend/src/pages/: about.astro  contact.astro  index.astro  training_options.astro
apps/site-frontend/src/styles/: global.css  index.css  navbar.css
apps/site-frontend/src/styles/about/: about.css
apps/site-frontend/src/styles/contact/: contact.css
apps/site-frontend/src/styles/index/: InstagramPost.css  TestSlider.css  about.css  index.css  testimonies.css
backend/: Dockerfile  pyproject.toml  settings.py
backend/backend/: settings.py  urls.py
backend/core/: views.py
frontend/: Dockerfile
frontend/src/: App.tsx
test/: package.json
(+3 files in other folders)
