[tool.poetry]
name = "website-backend"
version = "0.1.0"
description = ""
authors = ["danielhong <dan.hong378@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.6"
djangorestframework = "^3.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
